Several small code fixes